# ervin

./: .gitignore  README.md  __main__.py  config.json.templ  ervin  ervin_runner.py  mkenv  requirements.txt  setup.cfg  setup.py  setup_generate.py
config/: config.json
docs/: probe_blaster.MD
docs/formatting/: style.css
ervin/: __main__.py  conserved_domains.py  defaults.py  ervin.py  ervin_utils.py  flank_blaster.py  probe_blaster.py  probe_data.py  probe_finder.py  refactored_ervin.py  scaf_file.py  scaf_to_fasta.py  sequence_expander.py  sequence_hunter.py  virus_blaster.py
ervin/templates/: config_template.py
ervin2/: blast_probes.py  blast_wrapper.py  cli.py  config.py  datatypes.py  utils.py
src/: __init__.py  defaults.py  ervin_utils.py  exceptions.py  main.py  probe_blaster.py  probe_data.py  probe_finder.py  scaf_file.py  scaf_to_fasta.py  sequence_expander.py  sequence_hunter.py  virus_blaster.py  virus_rules.py
tests/: test_pep8.py  test_probe_blaster.py
tests/test_data/: dummy_probe_blaster_source_data.txt
