[metadata]
name = ervin
description-file = README.md
author = Rob Williams
author_email = robccwilliams@gmail.com

[options]
packages =
    ervin
python_requires >= 3.6
setup_requires =
    setuptools_scm

install_requires =
    click
    biopython
    progressbar2
    ftputil

[options.extras_require]
tests =
    pytest
    pytest-black
    pytest-cov

[options.entry_points]
console_scripts =
    ervin = ervin.refactored_ervin:cli

[tool:pytest]
addopts =
    -rx --black --cov=ervin
    --ignore setup.py
    --ignore ervin/__main__.py
    --ignore **/__init__.py